# kemsu_task

./: .env  .gitignore  Procfile  README.md  manage.py  pyproject.toml
entries/: forms.py  services.py  urls.py  views.py
kemsu_test/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/css/: base.css
templates/: base.html  create.html  list.html
